fixes shop logo on mobile devices.

--- a/templates/NOVA/themes/midnight/sass/midnight_crit.scss
+++ b/templates/NOVA/themes/midnight/sass/midnight_crit.scss
@@ -218,6 +218,7 @@ header { box-shadow: 0 rem(16px) rem(9px) rem(-12px) transparentize($black, .94)
     padding-bottom: $navbar-padding-y;
     img {
       height: $navbar-image-height;
+      width: auto;
     }
   }
 
